--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_mobile_ads: ^0.12.1+1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
